Refactor: Replace `System.out` with `IO` utility and enhance compatibility with updated Maven plugins